create react app

--- a/oldFront/news.html
+++ b/oldFront/news.html
@@ -5,15 +5,15 @@
     <title>Live</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/newsMain.css">
-    <link rel="stylesheet" href="./css/lastNews.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/newsMain.css">
+    <link rel="stylesheet" href="css/lastNews.css">
 </head>
 <body>
 <header>
     <div class="header-container">
-        <a href="./index.html"><img src="./public/logo.svg" alt="LIVE"></a>
+        <a href="index.html"><img src="public/logo.svg" alt="LIVE"></a>
         <nav>
             <div>Новости</div>
             <div>Финансы</div>
@@ -27,23 +27,23 @@
             <div>Погода</div>
         </nav>
         <div>
-            <img src="./public/search.svg" alt="поиск">
-            <img src="./public/user_logo.svg" alt="user">
-            <img src="./public/add.svg" alt="добавить новость">
+            <img src="public/search.svg" alt="поиск">
+            <img src="public/user_logo.svg" alt="user">
+            <img src="public/add.svg" alt="добавить новость">
         </div>
     </div>
 </header>
 <main>
     <div class="statistics-container">
         <div>
-            <img src="./public/heart.svg" alt="">
+            <img src="public/heart.svg" alt="">
             11,5 тыс
         </div>
         <div>
-            <img src="./public/comments.svg" alt="">
+            <img src="public/comments.svg" alt="">
             11,5 тыс
         </div>
-        <img src="./public/edit.svg" alt="" class="edit">
+        <img src="public/edit.svg" alt="" class="edit">
     </div>
     <div class="full-news-container">
         <div class="info-container">
@@ -52,7 +52,7 @@
         </div>
         <h1>Мининформ приостанавливает статус СМИ для TUT.BY на три месяца
             с 1 октября</h1>
-        <img src="./public/news1.jpg" alt="">
+        <img src="public/news1.jpg" alt="">
         <div class="full-text">
             <p>По приказу министра, с 1 октября TUT.BY утратит статус СМИ. При этом мы по-прежнему будем работать как
                 интернет-ресурс без статуса СМИ.</p>
@@ -78,7 +78,7 @@
         <div class="comments-container">
             <div class="name">Комментарии: <span>11,5 тыс</span></div>
             <div class="add-container">
-                <img class="user-comment-image" src="./public/user_logo.svg" alt="">
+                <img class="user-comment-image" src="public/user_logo.svg" alt="">
                 <div>
                     <input type="text" placeholder="Оставьте комментарий">
                     <div class="button-container">
@@ -89,7 +89,7 @@
             </div>
             <div class="added-comments-container">
                 <div class="comment-container">
-                    <img class="user-comment-image" src="./public/user_logo.svg" alt="">
+                    <img class="user-comment-image" src="public/user_logo.svg" alt="">
                     <div>
                         <span class="username">Андрей Свиридов</span>
                         <div class="comment-text">
@@ -101,9 +101,9 @@
                             А это саморазвитие уже. Лайк за постоянство !!! Лайк за оперативность !!!
                         </div>
                         <span class="answer">Ответить</span>
-                        <span class="hide-show"> <img src="./public/up-arrow.svg" alt="">Скрыть все ответы</span>
+                        <span class="hide-show"> <img src="public/up-arrow.svg" alt="">Скрыть все ответы</span>
                         <div class="comment-container">
-                            <img src="./public/user_logo.svg" alt="" class="subcomment-user-logo">
+                            <img src="public/user_logo.svg" alt="" class="subcomment-user-logo">
                             <div>
                                 <span class="username">Я</span>
                                 <div class="comment-text">
