--- a/oldFront/addNews.html
+++ b/oldFront/addNews.html
@@ -5,15 +5,15 @@
     <title>Live</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/addNews.css">
-    <link rel="stylesheet" href="./css/lastNews.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/addNews.css">
+    <link rel="stylesheet" href="css/lastNews.css">
 </head>
 <body>
 <header>
     <div class="header-container">
-        <a href="./index.html"><img src="./public/logo.svg" alt="LIVE"></a>
+        <a href="index.html"><img src="public/logo.svg" alt="LIVE"></a>
         <nav>
             <div>Новости</div>
             <div>Финансы</div>
@@ -27,9 +27,9 @@
             <div>Погода</div>
         </nav>
         <div>
-            <img src="./public/search.svg" alt="поиск">
-            <img src="./public/user_logo.svg" alt="user">
-            <img src="./public/add.svg" alt="добавить новость">
+            <img src="public/search.svg" alt="поиск">
+            <img src="public/user_logo.svg" alt="user">
+            <img src="public/add.svg" alt="добавить новость">
         </div>
     </div>
 </header>
@@ -43,7 +43,7 @@
         </div>
         <input type="text" placeholder="Текст заголовка" class="news-name">
         <div class="image-container">
-            <img src="./public/plus.svg" alt="">
+            <img src="public/plus.svg" alt="">
         </div>
         <div class="full-text" contentEditable=true data-text="Основной текст новости"></div>
         <div class="button-container">
