--- a/oldFront/index.html
+++ b/oldFront/index.html
@@ -5,15 +5,15 @@
     <title>Live</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/indexMain.css">
-    <link rel="stylesheet" href="./css/lastNews.css">
+    <link rel="stylesheet" href="css/lastNews.css">
 </head>
 <body>
 <header>
     <div class="header-container">
-        <a href="./index.html"><img src="./public/logo.svg" alt="LIVE"></a>
+        <a href="./index.html"><img src="public/logo.svg" alt="LIVE"></a>
         <nav>
             <div>Новости</div>
             <div>Финансы</div>
@@ -27,33 +27,33 @@
             <div>Погода</div>
         </nav>
         <div>
-            <img src="./public/search.svg" alt="поиск">
-            <img src="./public/user_logo.svg" alt="user">
-            <img src="./public/add.svg" alt="добавить новость">
+            <img src="public/search.svg" alt="поиск">
+            <img src="public/user_logo.svg" alt="user">
+            <img src="public/add.svg" alt="добавить новость">
         </div>
     </div>
 </header>
 <main>
     <div class="main-news-container">
         <div class="big-news-container">
-            <a href="./news.html">
-                <img src="./public/news1.jpg" alt="">
+            <a href="news.html">
+                <img src="public/news1.jpg" alt="">
             </a>
             <div class="info-container">
                 <div class="tag yellow">НЕДВИЖИМОСТЬ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
                 <div class="statistic">
                     <div>
-                        <img src="./public/heart.svg" alt="">
+                        <img src="public/heart.svg" alt="">
                         1,5 тыс
                     </div>
                     <div>
-                        <img src="./public/comments.svg" alt="">
+                        <img src="public/comments.svg" alt="">
                         11,5 тыс
                     </div>
                 </div>
             </div>
-            <a href="./news.html">
+            <a href="news.html">
                 <h1>Требониан Галл происходил из старинного этрусского рода.
                     В конце правления императора Деция Траяна он
                     занимал должность легата</h1>
@@ -64,24 +64,24 @@
         </div>
         <!-- Вторая новость -->
         <div class="big-news-container">
-            <a href="./news.html">
-                <img src="./public/news1.jpg" alt="">
+            <a href="news.html">
+                <img src="public/news1.jpg" alt="">
             </a>
             <div class="info-container">
                 <div class="tag yellow">НЕДВИЖИМОСТЬ</div>
                 <span class="data">29 сентября 2020 в 10:58</span>
                 <div class="statistic">
                     <div>
-                        <img src="./public/heart.svg" alt="">
+                        <img src="public/heart.svg" alt="">
                         1,5 тыс
                     </div>
                     <div>
-                        <img src="./public/comments.svg" alt="">
+                        <img src="public/comments.svg" alt="">
                         11,5 тыс
                     </div>
                 </div>
             </div>
-            <a href="./news.html">
+            <a href="news.html">
                 <h1>Требониан Галл происходил из старинного этрусского рода. В конце правления императора Деция Траяна
                     он
                     занимал должность легата</h1>
@@ -96,60 +96,60 @@
         <h2>Горячее</h2>
 
         <div class="small-news-container">
-            <a href="./news.html" class="image-link">
-                <img src="./public/news1.jpg" alt="">
+            <a href="news.html" class="image-link">
+                <img src="public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a class="header" href="./news.html">
+            <a class="header" href="news.html">
                 <h2>Проглотившая слона змея стала классикой
                     за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
-                    <img src="./public/heart.svg" alt="">
+                    <img src="public/heart.svg" alt="">
                     1,5 тыс
                 </div>
                 <div>
-                    <img src="./public/comments.svg" alt="">
+                    <img src="public/comments.svg" alt="">
                     11,5 тыс
                 </div>
             </div>
         </div>
         <!--контейнер новостей-->
         <div class="small-news-container">
-            <a href="./news.html">
-                <img src="./public/news1.jpg" alt="">
+            <a href="news.html">
+                <img src="public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a class="header" href="./news.html">
+            <a class="header" href="news.html">
                 <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
-                    <img src="./public/heart.svg" alt="">
+                    <img src="public/heart.svg" alt="">
                     1,5 тыс
                 </div>
                 <div>
-                    <img src="./public/comments.svg" alt="">
+                    <img src="public/comments.svg" alt="">
                     11,5 тыс
                 </div>
             </div>
         </div>
         <div class="small-news-container">
-            <a href="./news.html">
-                <img src="./public/news1.jpg" alt="">
+            <a href="news.html">
+                <img src="public/news1.jpg" alt="">
             </a>
             <div class="tag blue">СПОРТ</div>
-            <a class="header" href="./news.html">
+            <a class="header" href="news.html">
                 <h2>Проглотившая слона змея стала классикой за 2000 лет до «Маленького принца».</h2>
             </a>
             <div class="statistic">
                 <div>
-                    <img src="./public/heart.svg" alt="">
+                    <img src="public/heart.svg" alt="">
                     1,5 тыс
                 </div>
                 <div>
-                    <img src="./public/comments.svg" alt="">
+                    <img src="public/comments.svg" alt="">
                     11,5 тыс
                 </div>
             </div>
